fixed cards not showing up

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -2076,7 +2076,7 @@ body:not(.gt2-opt-color-override) {
 .gt2-opt-show-media-with-content-warnings {
   [data-testid=tweet].gt2-show-media,
   &.gt2-opt-show-media-with-content-warnings-sel-7 [data-testid=tweet] {
-    [aria-labelledby] > div > div > div {
+    [aria-labelledby] > div > div:not([data-testid="card.wrapper"]) > div {
       &:nth-child(1) {
         filter: unset;
       }
